--- a/cover-letter-generator/package.json
+++ b/cover-letter-generator/package.json
@@ -6,14 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start-api": "cd api && venv/bin/flask run --no-debugger",
+    "start": "npm-run-all --parallel start-api start-react",
+    "start-react": "react-scripts start",
+    "start-api": "cd api && venv\\Scripts\\flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,8 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "options": {
-    "allowedHosts": ["localhost", ".localhost"],
-    "proxy": "https://localhost:5000/"
-  }
+  "proxy": "http://127.0.0.1:5000"
 }
